--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="flex justify-between">
           <span class="text-slate-500">Listed</span>
-          <span class="font-medium">NSE and BSE</span>
+          <span class="font-medium">NSE & BSE</span>
         </div>
       </div>
 
